database-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: db
  namespace: guytamari
spec:
  serviceName: db
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      imagePullSecrets:
        - name: ecr-secret
      containers:
        - name: db
          image: 992382545251.dkr.ecr.us-east-1.amazonaws.com/guytamari/k8s-final:mariadb-10.6.4
          args:
            - --default-authentication-plugin=mysql_native_password
          ports:
            - containerPort: 3306
            - containerPort: 33060
          volumeMounts:
            - name: db-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: db-storage
          persistentVolumeClaim:
            claimName: db-pv-claim
