wordpress-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress-service
  namespace: guytamari
  labels:
    app: wordpress
spec:
  selector:
    app: wordpress
    namespace: guytamari
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
